--- a/vtuber.html
+++ b/vtuber.html
@@ -96,17 +96,20 @@
   <div class="half-image loading-icon">
       <div class="embed-container">
         <iframe src="https://www.youtube.com/embed/ZZcXtV07oW8" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      </div>     
       </div>   
 
 
       <div class="half-image loading-icon">
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/fyRSLAo_1Zw" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>     
         </div>   
     
         <div class="half-image loading-icon">
           <div class="embed-container">
             <iframe src="https://www.youtube.com/embed/BKFy4Dxw2H4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>     
           </div>    
 
 
