--- a/vtuber.html
+++ b/vtuber.html
@@ -84,9 +84,10 @@
       <br>
 
    <!-- Full Debut Videos -->
-   <div class="art-header">
-   <h2>Full Debut Videos</h2>
-   </div>
+   <div class="art-section">
+    <div class="art-header">
+      <h2>Full Debut Videos</h2>
+    </div>
 
    <div class="half-image loading-icon">
     <div class="embed-container">
