--- a/vtuber.html
+++ b/vtuber.html
@@ -86,6 +86,9 @@
       <div class="half-image loading-icon">
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>
+        <br>     
+        <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>     
       </div>
