--- a/vtuber.html
+++ b/vtuber.html
@@ -83,7 +83,7 @@
 
       <br>
 
-      <div class="half-image loading-icon">
+      <div class="half-image">
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
