--- a/vtuber.html
+++ b/vtuber.html
@@ -83,6 +83,12 @@
 
       <br>
 
+      <div class="art-section">
+        <div class="art-header">
+          <h2>Examples of Trailers</h2>
+        </div>
+  
+
       <div class="half-image">
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
