--- a/vtuber.html
+++ b/vtuber.html
@@ -83,20 +83,32 @@
 
       <br>
 
-      <div class="art-section">
-        <div class="art-header">
-          <h2>Examples of Trailers</h2>
-        </div>
-  
+      <br>
 
       <div class="half-image">
         <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://www.youtube.com/embed/7lXA1FbE7xY" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
         <br>     
         <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/iBXBpvSSUAA" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div> 
+        <br>     
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/BKFy4Dxw2H4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div> 
+        <br>     
+        <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>     
+        </div>    
+        <br>     
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/xp3uFdB7BH4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>  
+        <br>     
+        <div class="embed-container">
+          <iframe src="https://www.youtube.com/embed/fVsKkc2IjS0" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>   
       </div>
     
 
