--- a/vtuber.html
+++ b/vtuber.html
@@ -101,7 +101,7 @@
         </div> 
         <br>     
         <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/7Vx8RSez-JI" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://youtu.be/fyRSLAo_1Zw" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>    
         <br>     
         <div class="embed-container">
