--- a/about.html
+++ b/about.html
@@ -49,14 +49,14 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://i.imgur.com/4ui7Kt4.png">
+        <img src="https://i.imgur.com/mhDO28j.png">
       </div>
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
 
-          <p>I'm a designer and mograph gal based in California with a passion for art, anime, and video games. I love exploring ways design and motion can connect brands with communities, artists, and entertainers. Fandoms are where I thrive! </p>
+          <p>I'm a designer and mograph gal working remotely in California with a passion for art, anime, and video games. I love exploring ways design and motion can connect brands with communities, artists, and entertainers. Fandoms are where I thrive! </p>
 
-          <p>Outside of the hustle, you can find me watching vtubers, streaming Genshin Impact on Twitch, and walking my cats in parks.</p>  
+          <p>Outside of the hustle, you can find me watching vtubers, streaming Genshin Impact on Twitch, and collecting cute plushies.</p>  
             
             <p>If you need someone to press buttons while talking about the latest anime, I'm your gal 😌</p>
 
