--- a/lore.html
+++ b/lore.html
@@ -52,12 +52,15 @@
     <div class="art-section">
       <div class="art-header">
         <h2>VTuber Lore Video Animation</h2>
-        <p>Animated the artwork for a VTuber lore video, a video that tells the story behind a VTuber's character. Art by <a href="https://twitter.com/LaciaEverlight">Lacia</a></p>
+        <p>Animated the artwork for a VTuber lore video, a video that tells the story behind a VTuber's character. Art by <a href="https://twitter.com/LaciaEverlight" text-decoration="none">Lacia</a></p>
       </div>
 
       <div class="art-display">
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux7_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/comp-3_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux2_orig.gif">
@@ -66,10 +69,10 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux3_orig.gif">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/editor/lux4.gif?1676423429">
+        <img src="https://64.media.tumblr.com/ba0cf66b2a890eebff5878ff4776e3ba/f7ce94b7df52147b-2e/s540x810/4036495f1628e9906f8181bd9074ca5c75f02370.gifv">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/published/lux1.gif?1676423793">
+        <img src="https://64.media.tumblr.com/c0f2de6fbc04f2e7c4f0a916bcc7b0a8/f7ce94b7df52147b-e6/s540x810/10dd86ceb933bbe4915a7ee1bfa916435ad1015f.gifv">
       </div>
       <div class="half-image loading-icon">
         <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux6_orig.gif">
