--- a/lore.html
+++ b/lore.html
@@ -90,7 +90,6 @@
         <div class="art-section">
           <div class="art-header">
             <h2>Behind the Scenes</h2>
-            <p>Timelapses of animating the artwork.</p>
           </div>
     
           <div class="art-display">
@@ -99,6 +98,12 @@
             </div>
             <div class="half-image loading-icon">
               <img src="https://64.media.tumblr.com/2841f22b1936753fafd9da68960355f5/f7ce94b7df52147b-50/s540x810/dc86ee24a500710863c8510cec1c3a8cbb7d5022.gifv">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://64.media.tumblr.com/cf968a33523658a2d787579bcb8ee730/f7ce94b7df52147b-ec/s540x810/33d33acb211e8e6649283110c5cefcdc4814c177.gifv">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://64.media.tumblr.com/b8c0ec7ddd0e5c850935f57d4d91a1ca/f7ce94b7df52147b-29/s540x810/621423f3695c893e89a3a1f7677f0055bdceb266.gifv">
             </div>
 
         
