--- a/lore.html
+++ b/lore.html
@@ -53,6 +53,10 @@
       <div class="art-header">
         <h2>VTuber Lore Video Animation</h2>
         <p>Animated the artwork for a VTuber lore video, a video that tells the story behind a VTuber's character. Art by <a href="https://twitter.com/LaciaEverlight" text-decoration="none">Lacia</a></p>
+        <div class="full-image loading-icon">
+          <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/NqysS1OvF3E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>     
       </div>
 
       <div class="art-display">
