--- a/lore.html
+++ b/lore.html
@@ -59,7 +59,7 @@
           </div>     
       </div>
 
-      <div class="art-display">
+      <div class="art-display"><br>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux7_orig.gif">
         </div>
