--- a/nexon.html
+++ b/nexon.html
@@ -55,30 +55,30 @@
         <p>Trailers for MapleStory's mobile version, MapleStory M. I was tasked with splicing together various cinematics, gameplay footage, sounds, and creating the motion graphics for the in-between and end slates. </p>
       </div>
 
-      <div class="half-image">
-        <div class="embed-container">
-          <iframe src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExanh3NjI1bWowOXQxajR1azRxcTJreGcwNzVndmdwZDZ4b25rODExeSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/olpWXlwsvgYRhFUEE6/giphy-downsized-large.gif" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      <div class="art-display"><br>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWJiNGx3OGVlZmFldjg4aXAxdGFqZDBqajNlcnI0dHV3ZzU1MWIwMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/olpWXlwsvgYRhFUEE6/giphy-downsized-large.gif">
         </div>
-        <br>    
-        <div class="embed-container">
-          <iframe src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWNrZG9qYmRubjNid3RwaXpqNjZkanhzY2xlOTNuZndtM3c3aWl0cSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B5VJ2RZ136a61J8oCl/giphy-downsized-large.gif" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div> 
-        <br>     
-        <div class="embed-container">
-          <iframe src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaHcwY3VqYjNyZDRkcGF0eW1hcWZreTFkYTVsZTR4cmt1NDZoY2dzbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LIL7Yo1PLBxx5j6DXY/giphy-downsized-large.gif" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div> 
-        <br>     
-        <div class="embed-container">
-          <iframe src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ3k0ZDRpbWgwMnQ5a3I5OTl6NTRwdWo5bmR0NXBzMGpqaGR4ZGZvOSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PDJFqrIELU52zUWcJa/giphy.gif" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>    
-        <br>     
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/xp3uFdB7BH4" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>  
-        <br>     
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/fVsKkc2IjS0" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>   
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWNrZG9qYmRubjNid3RwaXpqNjZkanhzY2xlOTNuZndtM3c3aWl0cSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B5VJ2RZ136a61J8oCl/giphy-downsized-large.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaHcwY3VqYjNyZDRkcGF0eW1hcWZreTFkYTVsZTR4cmt1NDZoY2dzbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LIL7Yo1PLBxx5j6DXY/giphy-downsized-large.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHFnZG9rbmk4eXF5bHM2dWk3ZGRhZ2Yza3FheXlycjl0Y2R2M2I3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B1505HSDcYe18dNRSV/giphy-downsized-large.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux3_orig.gif">
+        </div>
+      <div class="half-image loading-icon">
+        <img src="https://64.media.tumblr.com/c0f2de6fbc04f2e7c4f0a916bcc7b0a8/f7ce94b7df52147b-e6/s540x810/10dd86ceb933bbe4915a7ee1bfa916435ad1015f.gifv">
+      </div>
+      <div class="half-image loading-icon">
+        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux6_orig.gif">
+      </div>
+      <div class="half-image loading-icon">
+        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux5_orig.gif">
       </div>
 
       <div class="full-image">
