--- a/nexon.html
+++ b/nexon.html
@@ -69,17 +69,30 @@
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHFnZG9rbmk4eXF5bHM2dWk3ZGRhZ2Yza3FheXlycjl0Y2R2M2I3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B1505HSDcYe18dNRSV/giphy-downsized-large.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux3_orig.gif">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzBtdnhzdGdkYWdvc21waTNtYzE0ODFid3N4NndleWE4OTdiZGJ3OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RGlGrJqarJyz90f2Gb/giphy-downsized-large.gif">
         </div>
       <div class="half-image loading-icon">
-        <img src="https://64.media.tumblr.com/c0f2de6fbc04f2e7c4f0a916bcc7b0a8/f7ce94b7df52147b-e6/s540x810/10dd86ceb933bbe4915a7ee1bfa916435ad1015f.gifv">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzRnZzYwbTh5MHUyeW9kdWc0dXJxbmZqcnp1MWppb3p5M3psc2c0biZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eezaOs7JgJses09nWg/giphy.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux6_orig.gif">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNThkZGo0d2RsMG1vanZmZ2lidjIwdGo5dXdtcGNvdmR5aWJqeGIxNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wC9hconl7leZVpcnk6/giphy.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux5_orig.gif">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaXZoa2l3ZDd5aGo3ZGpwd2JoNnNoY3BhaHhwN2oxcm95bnk1a2dvbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/rq0RLzU5elNJuOqIfM/giphy.gif">
       </div>
+    </div>
+    <div class="half-image loading-icon">
+      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ3k0ZDRpbWgwMnQ5a3I5OTl6NTRwdWo5bmR0NXBzMGpqaGR4ZGZvOSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PDJFqrIELU52zUWcJa/giphy.gif">
+    </div>
+  <div class="half-image loading-icon">
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcGpvZ3FzenV3dm82YXh3MGRycGs1ODhub2c4NXV6aDhtNncxbTg4NSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/4rVvGkvJNeEMfhwcP6/giphy.gif">
+  </div>
+  <div class="half-image loading-icon">
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHZuMWV6aGIxZWUyN3BucTd3MXByNno5Y2Ywdm9qbnNlN2c1ZGQ4ciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/bRNcGr9yZcw9CPwn7A/giphy.gif">
+  </div>
+  <div class="half-image loading-icon">
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMW0zMzQ5cDRkdDc4NmpvamZ1ZjRlY21mYzZ2a3R2bzBuZ3o5ZDZzZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PRGwHDWbURzY2fhn1o/giphy-downsized-large.gif">
+  </div>
 
       <div class="full-image">
         <div class="embed-container">
