--- a/nexon.html
+++ b/nexon.html
@@ -57,13 +57,10 @@
 
       <div class="art-display"><br>
         <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzRnZzYwbTh5MHUyeW9kdWc0dXJxbmZqcnp1MWppb3p5M3psc2c0biZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eezaOs7JgJses09nWg/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWJiNGx3OGVlZmFldjg4aXAxdGFqZDBqajNlcnI0dHV3ZzU1MWIwMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/olpWXlwsvgYRhFUEE6/giphy-downsized-large.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWNrZG9qYmRubjNid3RwaXpqNjZkanhzY2xlOTNuZndtM3c3aWl0cSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B5VJ2RZ136a61J8oCl/giphy-downsized-large.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaHcwY3VqYjNyZDRkcGF0eW1hcWZreTFkYTVsZTR4cmt1NDZoY2dzbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LIL7Yo1PLBxx5j6DXY/giphy-downsized-large.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHFnZG9rbmk4eXF5bHM2dWk3ZGRhZ2Yza3FheXlycjl0Y2R2M2I3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B1505HSDcYe18dNRSV/giphy-downsized-large.gif">
@@ -71,9 +68,6 @@
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzBtdnhzdGdkYWdvc21waTNtYzE0ODFid3N4NndleWE4OTdiZGJ3OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RGlGrJqarJyz90f2Gb/giphy-downsized-large.gif">
         </div>
-      <div class="half-image loading-icon">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzRnZzYwbTh5MHUyeW9kdWc0dXJxbmZqcnp1MWppb3p5M3psc2c0biZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eezaOs7JgJses09nWg/giphy.gif">
-      </div>
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNThkZGo0d2RsMG1vanZmZ2lidjIwdGo5dXdtcGNvdmR5aWJqeGIxNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wC9hconl7leZVpcnk6/giphy.gif">
       </div>
@@ -94,6 +88,9 @@
     </div>
 
 <br><br><br>
+<div id="content">
+  <!-- Section 1 -->
+  <div class="art-section">
       <div class="full-image">
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/y9Ha3zGc74s" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
