--- a/nexon.html
+++ b/nexon.html
@@ -60,9 +60,6 @@
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWJiNGx3OGVlZmFldjg4aXAxdGFqZDBqajNlcnI0dHV3ZzU1MWIwMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/olpWXlwsvgYRhFUEE6/giphy-downsized-large.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHFnZG9rbmk4eXF5bHM2dWk3ZGRhZ2Yza3FheXlycjl0Y2R2M2I3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/B1505HSDcYe18dNRSV/giphy-downsized-large.gif">
-        </div>
-        <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzBtdnhzdGdkYWdvc21waTNtYzE0ODFid3N4NndleWE4OTdiZGJ3OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RGlGrJqarJyz90f2Gb/giphy-downsized-large.gif">
         </div>
       <div class="half-image loading-icon">
@@ -88,6 +85,10 @@
     </div>
 
 <br><br><br>
+
+<div id="content">
+  <!-- Section 1 -->
+  <div class="art-section">
       <div class="full-image">
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/y9Ha3zGc74s" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
@@ -102,7 +103,11 @@
         </div>   
       </div>
     
+    </div>
+    
 
+
+  </div>
 
       </div>
       <hr>
