--- a/nexon.html
+++ b/nexon.html
@@ -83,6 +83,7 @@
     <div class="half-image loading-icon">
       <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMW0zMzQ5cDRkdDc4NmpvamZ1ZjRlY21mYzZ2a3R2bzBuZ3o5ZDZzZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PRGwHDWbURzY2fhn1o/giphy-downsized-large.gif">
     </div>
+    </div>
 
 <br><br><br>
 
