--- a/animation.html
+++ b/animation.html
@@ -53,21 +53,19 @@
       <div class="art-header">
         <h2>Animated Artwork</h2>
         <p>Various animated artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
-        <div class="full-image loading-icon">
-          <div class="embed-container">
-            <iframe src="https://www.youtube.com/embed/NqysS1OvF3E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-          </div>     
-      </div>
 
-      <div class="art-display"><br>
+      <div class="art-display">
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/kae-eyes-gif_orig.gif">
-        </div><br>
+        </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/anime-pv-art-sample_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/misty2_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/c593bc073ff75a27542322e98b175255/f7ce94b7df52147b-11/s540x810/cfa45f85990694ecba6bb74bc11474972ea1e973.gifv">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux2_orig.gif">
@@ -82,7 +80,7 @@
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaW9nc255Z3MzdzRyb3hyZG9tdnppcWUzZnRxMWcxbzcwczJmbDZ0eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PQGidAADhHE8WSAbEv/giphy-downsized-large.gif">
       </div>
       <div class="half-image loading-icon">
-        <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux6_orig.gif">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3dxOXhvOHo4d3o4bW4yNWYzbzhwemJoenBkeG1nM3ZzdzZkc2R4YyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/7hPDhyfQ9nZa9dD2ST/giphy.gif">
       </div>
     
 
