--- a/animation.html
+++ b/animation.html
@@ -55,8 +55,8 @@
         <p>Various animated artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
 
       <div class="art-display">
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/kae-eyes-gif_orig.gif">
+        <div class="full-image loading-icon">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmtkNXBzenJyZThpNWtraGoxbWN3NGdrYXRyZWsyeG5ncm10MDB6ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XZniudbPDid9SPRw8A/giphy.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/anime-pv-art-sample_orig.gif">
@@ -68,9 +68,6 @@
           <img src="https://64.media.tumblr.com/c593bc073ff75a27542322e98b175255/f7ce94b7df52147b-11/s540x810/cfa45f85990694ecba6bb74bc11474972ea1e973.gifv">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lux2_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/abyzab-ending-screen-gif_orig.gif">
         </div>
       <div class="half-image loading-icon">
@@ -79,7 +76,7 @@
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaW9nc255Z3MzdzRyb3hyZG9tdnppcWUzZnRxMWcxbzcwczJmbDZ0eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PQGidAADhHE8WSAbEv/giphy-downsized-large.gif">
       </div>
-      <div class="half-image loading-icon">
+      <div class="full-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3dxOXhvOHo4d3o4bW4yNWYzbzhwemJoenBkeG1nM3ZzdzZkc2R4YyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/7hPDhyfQ9nZa9dD2ST/giphy.gif">
       </div>
     
