--- a/animation.html
+++ b/animation.html
@@ -55,7 +55,7 @@
         <p>Various animated artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
 
       <div class="art-display">
-        <div class="full-image loading-icon">
+        <div class="full-image loading-icon" height="65%" width="65%">
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmtkNXBzenJyZThpNWtraGoxbWN3NGdrYXRyZWsyeG5ncm10MDB6ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XZniudbPDid9SPRw8A/giphy.gif">
         </div>
         <div class="half-image loading-icon">
@@ -77,7 +77,7 @@
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaW9nc255Z3MzdzRyb3hyZG9tdnppcWUzZnRxMWcxbzcwczJmbDZ0eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PQGidAADhHE8WSAbEv/giphy-downsized-large.gif">
       </div>
       <div class="full-image loading-icon">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3dxOXhvOHo4d3o4bW4yNWYzbzhwemJoenBkeG1nM3ZzdzZkc2R4YyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/7hPDhyfQ9nZa9dD2ST/giphy.gif">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcG9rNzJlamtzMXU1NHBnazRqM3l0ejk5Nnhkc2h4MGMzbThtbTBtdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Khb4bRgcxveotbzjew/giphy.gif">
       </div>
     
 
