--- a/animation.html
+++ b/animation.html
@@ -59,6 +59,9 @@
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmtkNXBzenJyZThpNWtraGoxbWN3NGdrYXRyZWsyeG5ncm10MDB6ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/XZniudbPDid9SPRw8A/giphy.gif">
         </div>
         <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/c593bc073ff75a27542322e98b175255/f7ce94b7df52147b-11/s540x810/cfa45f85990694ecba6bb74bc11474972ea1e973.gifv">
+        </div>
+        <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/anime-pv-art-sample_orig.gif">
         </div>
         <div class="half-image loading-icon">
@@ -73,9 +76,10 @@
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaW9nc255Z3MzdzRyb3hyZG9tdnppcWUzZnRxMWcxbzcwczJmbDZ0eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PQGidAADhHE8WSAbEv/giphy-downsized-large.gif">
       </div>
-      <div class="half-image loading-icon">
-        <img src="https://64.media.tumblr.com/c593bc073ff75a27542322e98b175255/f7ce94b7df52147b-11/s540x810/cfa45f85990694ecba6bb74bc11474972ea1e973.gifv">
-      </div>
+    </div>
+
+
+      <div class="art-display">
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjA0M3NhZjZvb3ZpMTR2YXJweTU1cHJxY2FhdDd2bzRmNWl1MmlieSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/0Ccq0GYLMLojw5RgPt/giphy.gif">
       </div>
