--- a/animation.html
+++ b/animation.html
@@ -86,7 +86,12 @@
       <div class="half-image loading-icon">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdzdzNGZ6dnI2c3NpZmt1a3NvOG9neXd6MXBhYnc1dmVkeTJzdnJ3diZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/M0onC3HTNrymTZChu6/giphy.gif">
       </div>
-    
+      <div class="half-image loading-icon">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExY2JjcjJ6bnVpY21hYTJqZHk2b2gyaDB3djU3MW9sYXdlYjNwZHB0dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/piozei2XsRuBqn1pdc/giphy.gif">
+      </div>
+      <div class="half-image loading-icon">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdWN0enF3eWoweXhuZm9pbTlpZ3VndGRqa2ltNzgyeTludTdtYmRiNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/lx72VG7uIJj07KZdTO/giphy.gif">
+      </div>
 
 
       </div>
