--- a/animation.html
+++ b/animation.html
@@ -102,7 +102,7 @@
           <div class="art-header">
             <h2>Behind the Scenes</h2>
           </div>
-    
+    </div>
           <div class="art-display">
             <div class="half-image loading-icon">
               <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaGM4M2wyOG5pb3Q1NmRveTY0ZHl0bWhhNGwxaGk1dnlmM3BpczkwNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/oL0v1pSyasU7MzFzpO/giphy.gif">
