--- a/animation.html
+++ b/animation.html
@@ -53,6 +53,7 @@
       <div class="art-header">
         <h2>Animated Artwork</h2>
         <p>Various animated artworks done in After Effects. Artwork was pre-drawn by other artists.</a></p>
+        </div>
 
       <div class="art-display">
         <div class="half-image loading-icon">
