--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div class="item">
       <a href="animation.html">
-        <div class="image-container loading-icon"><img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZDJjZWJsbmJvYjE0M2VnZDR4enA5MTdmejZoanRreWZ5MWF1b2p5ZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MCf3w3kH155gKoKpMK/giphy.gif" alt="Suiting Up"></div>
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZm82c2d6aTk5Z3JwZ25hODZ0eXR0NW1zZXVvenlyN3JwOHp0Zjd2OCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/aSrcVVzREtrE1WWE57/giphy.gif" alt="Suiting Up"></div>
         <span>Animated Artwork (pre-drawn)</span>
       </a>
     </div>
