--- a/lore.html
+++ b/lore.html
@@ -56,7 +56,7 @@
         <div class="full-image loading-icon">
           <div class="embed-container">
             <iframe src="https://www.youtube.com/embed/NqysS1OvF3E" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-          </div>     
+          </div>    </div> 
       </div>
 
       <div class="art-display"><br>
