--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -77,9 +77,9 @@
 
         
         </div> 
-        <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/J8E75/60300cb098.mp4" type="video/mp4">
-        </video>
+        <div class="full-image loading-icon">
+          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExY3Q5bWM2eTltbnBoY3p3dnJqdjU4NGh5MXg3Nnh2ZHZwdXViMDJmYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RFaR08yMAmbnMvvCzC/giphy.gif">
+        </div>
       </div>
 
 
