--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -77,9 +77,8 @@
 
         
         </div> 
-        <div class="full-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExY3Q5bWM2eTltbnBoY3p3dnJqdjU4NGh5MXg3Nnh2ZHZwdXViMDJmYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RFaR08yMAmbnMvvCzC/giphy.gif">
-        </div>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/240kga?autoplay=1&nocontrols=1" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        
       </div>
 
 
