--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -76,8 +76,7 @@
           <p>Once the logo was finalized by our senior designer (Justin Vachon), I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations. Frame by frame paint splatter animation by Jack Taylor.</p>
 
         
-        </div> 
-        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://www.youtube.com/embed/Gu_MjBhMISk?si=UvnAdxIMYg5TlVXH?autoplay=1&nocontrols=1" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gu_MjBhMISk?&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
       </div>
 
