--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -105,9 +105,7 @@
           <p>Customizable lower and upper thirds were needed for easy use by the Video Team.  This involved me animating it in After Effects and then preparing the lower thirds as time responsive .MOGRT templates for Premiere Pro use.</p>
         </div>
         <div style="width:100%;height:0px;position:relative;padding-bottom:36.800%;"><iframe src="https://streamable.com/e/xkhvjq?autoplay=1&nocontrols=1" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div><br>
-        <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/J8E6E/e45857804a.mp4" type="video/mp4">
-        </video><br>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:43.333%;"><iframe src="https://streamable.com/e/s7k3me?autoplay=1&nocontrols=1" frameborder="0" width="100%" height="100%" allowfullscreen allow="autoplay" style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div><br>
          <!-- Row 4 -->
          <div class="art-sub-header"><br>
           <p>Multiple name bars were created for use with up to 4 hosts.  These namebars were templatized so that the video editor(s) could toggle on and off up to 4 namebars.</p>
