--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -77,7 +77,7 @@
         
         </div> 
         <div class="full-image loading-icon">
-      <iframe src="https://giphy.com/embed/PzawrCQ4AsjcryTE8h" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+      <iframe src="https://giphy.com/embed/PzawrCQ4AsjcryTE8h" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div></div>
         
       </div>
 
