--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -90,7 +90,7 @@
           <p>Early transition drafts focused on the paint splatters covering the screen, but it was narrowed down to multicolored triangles from the logo and a wipe over the abstract memphis background from the intro.</p>
         </div>
         <div class="full-image loading-icon">
-       <iframe src="https://giphy.com/embed/4aGfkbHRTpBofrjglf"></iframe></div><p><a href="https://giphy.com/gifs/4aGfkbHRTpBofrjglf">
+       <iframe src="https://giphy.com/embed/4aGfkbHRTpBofrjglf"></iframe></div><p>
         </div>
           <div class="full-image loading-icon">
           <img src="https://media.giphy.com/media/iDmFE3gwC6PBFAyUaS/source.gif">
