--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -76,8 +76,8 @@
           <p>Once the logo was finalized by our senior designer (Justin Vachon), I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations. Frame by frame paint splatter animation by Jack Taylor.</p>
         
         </div> 
-        <div class="full-image loading-icon">
-      <iframe src="https://giphy.com/embed/PzawrCQ4AsjcryTE8h"></iframe></div>
+                  <div class="full-image loading-icon">
+        <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/PzawrCQ4AsjcryTE8h" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
         
       </div>
 
@@ -90,7 +90,7 @@
           <p>Early transition drafts focused on the paint splatters covering the screen, but it was narrowed down to multicolored triangles from the logo and a wipe over the abstract memphis background from the intro.</p>
         </div>
         <div class="full-image loading-icon">
-       <iframe src="https://giphy.com/embed/4aGfkbHRTpBofrjglf"></iframe></div><p>
+       <iframe src="https://giphy.com/embed/4aGfkbHRTpBofrjglf" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
         </div>
           <div class="full-image loading-icon">
           <img src="https://media.giphy.com/media/iDmFE3gwC6PBFAyUaS/source.gif">
