--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
             </a>
           </div>
 
+          <div class="item">
+            <a href="zines.html">
+              <div class="image-container loading-icon"><img src="https://64.media.tumblr.com/230321c0cd970d16c16f99c44574d868/3639fee865b8cb1d-3e/s400x600/70ea01bbb9336909493e74201e83380bedea5f14.gifv" alt="zines"></div>
+              <span>Fandom Merchandise Promo Trailers</span>
+            </a>
+          </div>
+
 
             <!-- Row 1 -->
             <div class="item">
