--- a/shows.html
+++ b/shows.html
@@ -55,6 +55,24 @@
         <p>Various IGN shows I got animate/design for. Scope of work ranges anywhere from animating full graphics packages, designing logos, creating intros, outros, lower thirds, transitions, custom segments, and client sponsored sequences. </p>
       </div>
 
+      
+      <div class="art-display">
+        <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/6d3abd60cbff8923c6605d08641d66ad/e5a4c50f698d5e69-39/s500x750/d2c7310947d8b8048920c83e8e761f62f2af6609.gifv">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/05c60ae3515d65422fee08aab287bf55/e5a4c50f698d5e69-45/s500x750/07eab1f8c00eaa9868eed446322865b0d35defea.gifv">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/a4a505f676aa55455d56866f419991a0/e5a4c50f698d5e69-19/s500x750/6844da430a4e768206465d0a0a2be01739b9d91f.gifv">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/32303176d5352ffae86e0662ab459340/e5a4c50f698d5e69-ef/s500x750/db0046ac4ca5b8843b915f85d20267a4a40b3637.gifv">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://64.media.tumblr.com/f37c493b1a092b87844d58d5527c5fd9/e5a4c50f698d5e69-ed/s540x810/65eafe9d946630f320a573f380d0e013891b3a01.gifv">
+        </div>
+
 
       </div>
 
@@ -163,13 +181,6 @@
                     </div>
                     <div class="half-image loading-icon">
                       <img src="https://64.media.tumblr.com/1bbd7b697eb60f2281bbdaed6347ca99/3639fee865b8cb1d-5a/s540x810/26219ab91786a4dc002f315ddd83851c0db86337.gifv">
-                    </div>
-                    <div class="half-image loading-icon">
-                      <img src="https://64.media.tumblr.com/d4f76f0079ba3062e486d643098e4f48/574501210315bc9c-3c/s540x810/dfa024ce0bffca76e12da91a1132bec2739d7892.gifv">
-                    </div>
-                    <div class="half-image loading-icon">
-                      <img src="">
-                    </div>
                     </div>
                     <div class="half-image loading-icon">
                       <img src="https://64.media.tumblr.com/a1c2b24e48dd52077cfefa637ac582d6/3639fee865b8cb1d-2d/s1280x1920/f775b67ad66ad6e41b22b66e41aaa1e094dd35d9.gifv">
