--- a/shows.html
+++ b/shows.html
@@ -136,10 +136,7 @@
                 <div class="half-image loading-icon">
                   <img src="https://64.media.tumblr.com/5953c6b2cc69b4d5155f420923e28f5e/574501210315bc9c-cd/s540x810/45744206ae11e02ec331ff9b388467719ed51730.gifv">
                 </div>
-                <div class="half-image loading-icon">
-                  <img src="https://64.media.tumblr.com/40ed15a65cb715d2ff663d005cb810fb/7a3ac13a650c8785-b1/s500x750/677d13d89b9ca61697cfc470831a02b603a6d0c2.gifv">
-                </div>
-    
+
               </div>
 
 
@@ -182,7 +179,7 @@
                     <div class="half-image loading-icon">
                       <img src="https://64.media.tumblr.com/1bbd7b697eb60f2281bbdaed6347ca99/3639fee865b8cb1d-5a/s540x810/26219ab91786a4dc002f315ddd83851c0db86337.gifv">
                     </div>
-                    <div class="half-image loading-icon">
+                    <div class="full-image loading-icon">
                       <img src="https://64.media.tumblr.com/a1c2b24e48dd52077cfefa637ac582d6/3639fee865b8cb1d-2d/s1280x1920/f775b67ad66ad6e41b22b66e41aaa1e094dd35d9.gifv">
                     </div>
         
