--- a/zines.html
+++ b/zines.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>MapleStory M Trailers for NEXON</h2>
-        <p>Trailers for MapleStory's mobile version, MapleStory M. I was tasked with splicing together various cinematics, gameplay footage, sounds, and creating the motion graphics for the in-between and end slates. </p>
+        <p>I was commissioned to edit and animate the promotional triler for Wayfinder, an Ace Attorney travel themed fanzine featuring 50+ creatives, and Project: Strix, a Spy x Family themed fanzine featuring 40+ creatives. </p>
       </div>
 
       <div class="art-display"><br>
@@ -107,20 +107,13 @@
 
       <div class="full-image">
         <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/SaY-WbVtuas" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://www.youtube.com/embed/4P8aIYPf_C0" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div> 
         <br>   
         <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/y9Ha3zGc74s" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://www.youtube.com/embed/7v0nXzZWVjo" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div> 
-        <br>     
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/dmxrYAQscxw" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div> 
-        <br>        
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/BCXzXE2uivU" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>   
+
       </div>
     
 
