--- a/zines.html
+++ b/zines.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Promotional Trailers for Fandom Zines</h2>
-        <p>I was commissioned to edit and animate the promotional trailers for Wayfinder, an Ace Attorney travel themed fanzine featuring 50+ creatives, and Project: Strix, a Spy x Family themed fanzine featuring 40+ creatives. </p>
+        <p>I was commissioned to edit and animate the promotional trailers for <a href="https://twitter.com/DGSTravelZine" text-decoration="none">Wayfinder</a>, an Ace Attorney travel themed fanzine featuring 50+ creatives, and <a href="https://twitter.com/sxfzine" text-decoration="none">Project: Strix</a>, a Spy x Family themed fanzine featuring 40+ creatives. </p>
       </div>
 
       <div class="art-display"><br>
