--- a/trashtaste.html
+++ b/trashtaste.html
@@ -74,7 +74,7 @@
       <div class="half-image loading-icon">
         <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476987302285424/Comp_31.gif">
       </div>
-      <div class="half-image loading-icon">
+      <div class="full-image loading-icon">
         <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154476986954162225/Comp_32.gif">
       </div>
     </div>
