--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     
     <div class="item">
       <a href="stinger.html">
-        <div class="image-container loading-icon"><img src="https://i.imgur.com/w8q7hg0.gif" alt="motion manga"></div>
-        <span>Stingers / Transitions</span>
+        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1154481888447168542/wayfinder_thumb.gif" alt="motion manga"></div>
+        <span>Stream Stingers / Transitions</span>
       </a>
     </div>
 
