--- a/vtuber.html
+++ b/vtuber.html
@@ -81,11 +81,36 @@
         <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/misty_orig.gif">
       </div>
 
-      <br>
+      </div>
 
-      <br>
+      <div id="content">
+        <!-- Section 1 -->
+        <div class="art-section">
+          <div class="art-header">
+            <h2>Behind the Scenes</h2>
+          </div>
+    
+          <div class="art-display">
+            <div class="half-image loading-icon">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724081385532/Comp_36.gif">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724463071252/Comp_35.gif">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593723733254225/Comp_33.gif">
+            </div>
+            <div class="half-image loading-icon">
+              <img src="https://cdn.discordapp.com/attachments/926858719684354058/1154593724890882169/Comp_34.gif">
+            </div>
+</div>
 
-      <br>
+<div id="content">
+  <!-- Section 1 -->
+  <div class="art-section">
+    <div class="art-header">
+      <h2>Full Videos</h2>
+    </div>
 
       <div class="half-image">
         <div class="embed-container">
