--- a/vtuber.html
+++ b/vtuber.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>VTuber Trailers & Showcases</h2>
-        <p>Collection of trailers and showcase videos commissioned by various VTubers (virtual streamers). I handled all video direction, editing, motion graphics, composition, backgrounds, and more. VTuber model art was provided by clients under my direction.</p>
+        <p>Collection of trailers and showcase videos commissioned by various VTubers (virtual streamers). I handled all video direction, editing, motion graphics, composition, backgrounds, and more. VTuber model footage was provided by clients under my direction.</p>
       </div>
 
       <div class="art-display">
@@ -136,7 +136,6 @@
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/fVsKkc2IjS0" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>   
-      </div>
     
 
 
