--- a/vtuber.html
+++ b/vtuber.html
@@ -112,7 +112,7 @@
       <h2>Full Videos</h2>
     </div>
 
-      <div class="half-image">
+      <div class="full-image">
         <div class="embed-container">
           <iframe src="https://www.youtube.com/embed/7lXA1FbE7xY" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
