--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://i.imgur.com/mhDO28j.png">
+        <img src="https://64.media.tumblr.com/29670ee68c5abc76d56d3ae259deb2bc/7d6ef9d6bf037e35-e1/s1280x1920/24485ad91e5de57f6099a00eff2606186ec03ba4.pnj">
       </div>
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
