--- a/nexon.html
+++ b/nexon.html
@@ -100,7 +100,7 @@
         </div> 
         <br>        
         <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/BCXzXE2uivU" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe src="https://www.youtube.com/embed/6nexmL7qcqQ" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>   
       </div>
     
