--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
     <div class="item">
       <a href="stinger.html">
-        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1154481888447168542/wayfinder_thumb.gif" alt="motion manga"></div>
+        <div class="image-container loading-icon"><img src="https://cdn.discordapp.com/attachments/906291532208955413/1154481888447168542/wayfinder_thumb.gif?ex=65fc7a0b&is=65ea050b&hm=7a9d87b3a3bc06068717f8498c05306a825d9d48defb16dd9bb87f13463373cc&"></div>
         <span>Stream Stingers / Transitions</span>
       </a>
     </div>
