--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://64.media.tumblr.com/29670ee68c5abc76d56d3ae259deb2bc/7d6ef9d6bf037e35-e1/s1280x1920/24485ad91e5de57f6099a00eff2606186ec03ba4.pnj">
+        <img src="https://cdn.discordapp.com/attachments/827751000226922560/1215713947366199316/IMG_9071.png?ex=65fdc0d7&is=65eb4bd7&hm=a159fcf2a8254fa03d73c4691aaab90b6173207c0f2fcd8e1e85aac79f4d532a&">
       </div>
       <div>
           <h2>Hello, I'm Kathleen! ✨</h2>
